--- a/XamarinUI/XamarinUI/XamarinUI/AppShell.xaml
+++ b/XamarinUI/XamarinUI/XamarinUI/AppShell.xaml
@@ -7,7 +7,8 @@
        x:Class="XamarinUI.AppShell"
        
        FlyoutHeaderBehavior="CollapseOnScroll"
-       xmlns:pages="clr-namespace:XamarinUI"
+       xmlns:local="clr-namespace:XamarinUI"
+       xmlns:pages="clr-namespace:XamarinUI.Pages"
        xmlns:cv="clr-namespace:XamarinUI.Pages.CollectionView"
        >
 
@@ -39,8 +40,13 @@
         <ShellContent 
                 Style="{StaticResource BaseStyle}" 
                 Title="Main Page" 
-                ContentTemplate="{DataTemplate pages:MainPage}" />
-        
+                ContentTemplate="{DataTemplate local:MainPage}" />
+
+        <ShellContent 
+                Style="{StaticResource BaseStyle}" 
+                Title="Basic MVVM" 
+                ContentTemplate="{DataTemplate pages:BasicMVVM}" />
+
         <Tab Title="CollectionView">
             <ShellContent 
                 Style="{StaticResource BaseStyle}" 
