added title in Basic MVVM page

--- a/XamarinUI/XamarinUI/XamarinUI/AppShell.xaml
+++ b/XamarinUI/XamarinUI/XamarinUI/AppShell.xaml
@@ -42,10 +42,12 @@
                 Title="Main Page" 
                 ContentTemplate="{DataTemplate local:MainPage}" />
 
-        <ShellContent 
+        <Tab Title="MVVM">
+            <ShellContent 
                 Style="{StaticResource BaseStyle}" 
                 Title="Basic MVVM" 
                 ContentTemplate="{DataTemplate pages:BasicMVVM}" />
+        </Tab>
 
         <Tab Title="CollectionView">
             <ShellContent 
